--- a/resources/sass/components/_main.scss
+++ b/resources/sass/components/_main.scss
@@ -42,7 +42,7 @@ main {
     }
   }
   .main__introduction__featuresImage {
-    background: url('/'+$fylo+'/vendors/images/illustration-features.svg');
+    background: url('/vendors/images/illustration-features.svg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
